--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.4",
     "react-social-media-embed": "^2.2.10",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
